--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,20 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".FactoryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ChooseMainProductActivity"
+            android:name=".ChooseFactory"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".FactoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChooseMainProductActivity"
+            android:exported="false">
         </activity>
     </application>
 
